--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <button id="zero" class="keypad">0 </button>
           <button class="keypad">.</button>
           <button id="equals" class="keypad operator">&equals;</button>
-        </div>
+        </div>TEST
       </section>
     </div>
   </body>
